# pinout

./: .gitignore  Cargo.toml  ESP32-MAXIO.csv  README.md
examples/: arduino_uno.csv  exp32.rs  main.rs  theme_debug.rs
src/: commands.txt  lib.rs
src/parser/: csv.rs  document.rs  mod.rs  types.rs
src/renderer/: svg.rs
