[package]
name = "pinout"
version = "0.1.0"
edition = "2021"
authors = ["Orhan Balci <orhanbalci@gmail.com>"]
description = "A Rust library and command-line tool for generating beautiful pinout diagrams in SVG format from CSV descriptions"
license = "MIT"
repository = "https://github.com/orhanbalci/pinout"
homepage = "https://github.com/orhanbalci/pinout"
documentation = "https://docs.rs/pinout"
readme = "README.md"
keywords = ["pinout", "svg", "diagram", "electronics", "microcontroller"]
categories = ["command-line-utilities", "graphics", "visualization"]

[dependencies]
base64 = "0.22.1"
csv = "1.3.1"
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
svg = "0.18.0"
thiserror = "2.0.12"

[dev-dependencies]
clap = "4.5.42"

